// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preparation action open should create an open folder action 1`] = `
Object {
  "cmf": Object {
    "routerPush": "/preparations/42",
  },
  "id": 42,
  "type": "TDP_OPEN_FOLDER",
}
`;

exports[`Preparation action open should create an open preparation action 1`] = `
Object {
  "payload": Object {
    "url": "http://dataprep.com/#/playground/preparation?prepid=42",
  },
  "type": "TDP_REDIRECT_WINDOW",
}
`;

exports[`Preparation action open should not create anything if type is unknown 1`] = `undefined`;

exports[`Preparation action should create a cancel rename action 1`] = `
Object {
  "payload": 42,
  "type": "TDP_CANCEL_RENAME_PREPARATION",
}
`;

exports[`Preparation action should create a create preparation action 1`] = `
Object {
  "payload": Object {
    "id": 42,
  },
  "type": "TDP_CREATE_PREPARATIONS",
}
`;

exports[`Preparation action should create a fetch action 1`] = `
Object {
  "payload": Object {
    "folderId": 42,
  },
  "type": "TDP_FETCH_PREPARATIONS",
}
`;

exports[`Preparation action should create a folder remove action 1`] = `
Object {
  "payload": Object {
    "id": 42,
    "type": "folder",
  },
  "type": "TDP_OPEN_REMOVE_FOLDER_MODAL",
}
`;

exports[`Preparation action should create a preparation remove action 1`] = `
Object {
  "payload": 42,
  "type": "TDP_REMOVE_PREPARATION",
}
`;

exports[`Preparation action should create a rename action 1`] = `
Object {
  "payload": Object {
    "id": 42,
    "name": undefined,
    "type": "preparation",
  },
  "type": "TDP_RENAME_PREPARATION",
}
`;

exports[`Preparation action should create a set title edition mode action 1`] = `
Object {
  "payload": 42,
  "type": "TDP_SET_TITLE_EDITION_MODE",
}
`;

exports[`Preparation action should create an open creator action 1`] = `
Object {
  "type": "TDP_OPEN_PREPARATION_CREATOR",
}
`;
